--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,6 @@
         <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
         <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" %>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma.min.css" integrity="sha512-HqxHUkJM0SYcbvxUw5P60SzdOTy/QVwA1JJrvaXJv4q7lmbDZCmZaqz01UPOaQveoxfYRv1tHozWGPMcuTBuvQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
     <%= javascript_importmap_tags %>
   </head>
 
@@ -27,10 +26,10 @@
     <nav class="navbar is-info">
       <div class="navbar-brand">
       <%= link_to root_path, class: "navbar-item" do %>
-        <h1 class="title is-5">Twittter</h1>
+        <h1 class="title is-5">Twitter</h1>
       <% end %>
       <div class="navbar-burger burger" data-target="navbarExample">
-          <span></span>
+          <span>STAR</span>
           <span></span>
           <span></span>
       </div>
@@ -41,12 +40,23 @@
           <div class="navbar-item">
           <div class="field is-grouped">
             <p class="control">
-              <%= link_to 'New Tweeet', new_tweeet_path, class: "button is-info is-inverted" %>
+              <%= link_to 'New Tweeet', root_path, class: "button is-info is-inverted" if user_signed_in? %>
             </p>
-            <p class="control">
-              <%= link_to 'Sign Up', '#', class: "button is-info" %>
-            </p>
-
+            <% if user_signed_in? %>
+                <p class="control">
+                  <%= link_to current_user.name, edit_user_registration_path, class: "button is-info" %>
+                </p>
+                <p>
+                  <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete }, class:"button is-info" %>
+                </p>
+            <% else %>
+              <p class="control">
+                <%= link_to 'Sign In', new_user_session_path, class: "button is-info" %>
+              </p>
+              <p class="control">
+                <%= link_to 'Sign Up', new_user_registration_path, class: "button is-info" %>
+              </p>
+            <% end %>
             </div>
           </div>
         </div>
