--- a/app/views/tweeets/_tweeet.html.erb
+++ b/app/views/tweeets/_tweeet.html.erb
@@ -1,6 +1,6 @@
 <div id="<%= dom_id tweeet %>">
   <p>
-    <strong>Tweeet:</strong>
+    <strong>Tweet:</strong>
     <%= tweeet.tweeet %>
   </p>
 
