--- a/app/views/tweeets/_who-to-follow.html.erb
+++ b/app/views/tweeets/_who-to-follow.html.erb
@@ -1,6 +1,6 @@
 <div class="column">
 	<nav class="panel">
-		<p class="panel-heading">Who to Follow</p>
+		<p class="panel-heading">Whom to Follow</p>
 
 	<div class="panel-block">
 		<article class="media">
@@ -12,8 +12,8 @@
 			<div class="media-content">
 				<div class="content">
 					<p>
-						<strong>John Smith</strong>
-						<small>@johnsmith</small>
+						<strong>Shahazmaal</strong>
+						<small>@shazmal</small>
 					</p>
 				</div>
 			</div>
@@ -29,8 +29,8 @@
 			<div class="media-content">
 				<div class="content">
 					<p>
-						<strong>John Smith</strong>
-						<small>@johnsmith</small>
+						<strong>Firoz Khan</strong>
+						<small>@firoz</small>
 					</p>
 				</div>
 			</div>
@@ -46,8 +46,8 @@
 			<div class="media-content">
 				<div class="content">
 					<p>
-						<strong>John Smith</strong>
-						<small>@johnsmith</small>
+						<strong>Shahanoor</strong>
+						<small>@shahnoor</small>
 					</p>
 				</div>
 			</div>
